styles.css
:root {
  --gray: #6C6C6C;
  --white: rgb(250, 250, 250);
  --orange: #f08f27;
  --brown: #f5deb3;
  --black: rgb(16, 16, 16);

  --primary-font: "Cormorant Garamond", sans-serif;
  --secondary-font: "Garamond Bold", serif;
  --mono-font: "Rubik", monospace;
}

s h1,
nav a,
html,
body {
    color: inherit;
}

h1,
h2,
h3 {
  text-align: center;
  font-family: var(--secondary-font);
  margin-top: 4rem;
}

article {
  text-align: justify;
  font-family: var(--primary-font);
  font-size: 1.4rem;
  margin: 10vh auto;
  width: min(90%, 600px);
}

header {
  width: min(90%, 600px);
  margin: 0 auto;
}

nav {
  text-align: center;
  font-family: var(--secondary-font);
  font-size: 1.5rem;
  margin-bottom: -3.5rem;
}

nav a {
  text-decoration: underline;
}

a {
  color: var(--orange);
  text-decoration: underline;
}

html,
body {
  color: var(--white);
  margin: 0;
  padding: 0;
  background-color: var(--black);
  transition: background-color 0.5s, color 0.5s;
}

#photo {
  margin: 1rem 0;
}

.orchard {
  color: var(--orange);
  font-weight: bolder;
}

.doodle-container {
  position: absolute;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

#doodles {
  position: relative;
  margin: 0 auto;
  width: min(100%, 800px);
  height: 100%;
  background-image: url("./static/texture.png");
  mix-blend-mode: hard-light;
  z-index: -1;
  opacity: 0.2;
}

#doodles>#longcat {
  position: absolute;
  top: 0;
  right: 50px;
  max-width: 300px;
}

#doodles>#sparkle {
  position: absolute;
  top: -80px;
  left: 30px;
  max-width: 100px;
}

#doodles>#john {
  position: absolute;
  top: 480px;
  left: 20px;
  max-width: 100px;
}

#doodles>#swag {
  position: absolute;
  top: 440px;
  right: 0;
  max-width: 150px;
}

#doodles>#star {
  position: absolute;
  top: -50px;
  right: 0;
  max-width: 120px;
}

#doodles>#sun {
  position: absolute;
  top: 1150px;
  right: 20px;
  max-width: 170px;
}

#doodles>#plant {
  position: absolute;
  top: 800px;
  left: 270px;
  max-width: 100px;
}

img,
iframe {
  max-width: 100%;
  border-radius: 5px;
}

@media (max-width: 600px) {
  article {
    margin: 5vh 2%;
  }

  header {
    width: 100%;
    margin: 0;
  }
}

